# tg-traffic-bot

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
migrations/: env.py  script.py.mako
migrations/queries/: first_rows.py
migrations/versions/: 2025_08_30_032adc3dc50f_user_model.py  2025_08_30_3f101b21d66a_insert_first_rows.py  2025_08_31_ba994182ffd9_bot_and_bot_channel_models.py
scripts/: run.sh
src/: loader.py  main.py
src/bots/: manager.py
src/core/: config.py  helpers.py  pydantic_types.py
src/core/db/: base.py  mixins.py  service.py  session.py  unitofwork.py
src/core/dto/: base.py
src/core/schemas/: base.py
src/enums/: bot.py  user.py
src/exceptions/: base.py  helpers.py
src/models/: __init__.py  bot.py  user.py
src/routers/: main.py
src/utils/: markdown.py
